fixed the masonry collapse

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -1342,6 +1342,7 @@ fieldset{
 		}
 		.stButton{
 		  width:100%; 
+		  padding-top:12px;
 		}
 	   }
 	   }
